[package]
name = "round"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["round"]
description = "round trait"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-round.git"
homepage = "https://github.com/nathanfaucett/rs-round"
